refactor: remove references of RDS as pro add-on

--- a/resources/shuttle-aws-rds.mdx
+++ b/resources/shuttle-aws-rds.mdx
@@ -3,8 +3,6 @@ title: "Shuttle AWS RDS"
 icon: "aws"
 ---
 
-<Snippet file="pro-feature.mdx" />
-
 This plugin provisions AWS RDS databases on [Shuttle](https://www.shuttle.rs). The following engines are supported:
 - Postgres
 - MySQL
@@ -36,7 +34,7 @@ The RDS instance created by Shuttle has the following specifications and feature
 - 1 Node
 - No Proxy
 
-The pricing of this instance can be found in the Pro Add-ons section of the [pricing page](https://www.shuttle.rs/pricing).
+The pricing of this instance can be found on our [pricing page](https://www.shuttle.rs/pricing).
 
 If you require a different configuration, please contact us on [Discord](https://discord.gg/shuttle) or email us at hello@shuttle.rs. We can provision any size or configuration of RDS to suit your needs - a full list of RDS features can be found [here](https://aws.amazon.com/rds/features/)
 
