refactor: fix broken link

--- a/support/migrating-rds-postgres.mdx
+++ b/support/migrating-rds-postgres.mdx
@@ -7,7 +7,7 @@ subscription you will lose access. Below are the steps you can take to migrate f
 AWS RDS PostgreSQL resource to the Shuttle shared database resource.
 
 1. Without removing the Shuttle AWS RDS pool from your application, follow the steps in
-[Shuttle shared DB](./shuttle-shared-db) to provision add a shared Postgrse database to
+[Shuttle shared DB](/resources/shuttle-shared-db) to provision add a shared Postgrse database to
 your project. You will now have two databases in your main function. You can ignore the
 new shared database pool for now.
 
