Secrets with Cargo Workspaces
I was getting ```Failed to interpolate string. Is your Secrets.toml correct?``` errors when I had the Secrets.toml in the wrong location so I thought I would make it clearer for everyone else!

--- a/resources/shuttle-secrets.mdx
+++ b/resources/shuttle-secrets.mdx
@@ -67,3 +67,6 @@ cargo shuttle resource delete secrets
   with no way of providing them in code. Sometimes, this can be solved by
   manually setting the variable after loading the secret (and before loading the library):
   `std::env::set_var("SOME_ENV_VAR", my_secret);`
+
+- If you are using a [Cargo Workspace](configuration/project-structure#workspaces} you will need to ensure your `Secrets.dev.toml` file and `Secrets.toml`
+    files are located in the crate with the `shuttle_runtime::main macro.`
