--- a/introduction/welcome.mdx
+++ b/introduction/welcome.mdx
@@ -24,21 +24,38 @@ icon: "hand-wave"
   <Card
     title="Examples"
     icon="book"
-    href="/examples/axum"
+    href="/examples"
     color="#f8b5F2"
   >
+    Check out some Shuttle examples
+  </Card>
+  <Card
+    title="Templates"
+    icon="sparkles"
+    href="/templates"
+    color="#ffdf54"
+  >
     Get started from one of many templates
+  </Card>
+  <Card
+    title="Tutorials"
+    icon="list-check"
+    href="/templates/tutorials"
+    color="#a26"
+  >
+    Follow one of our tutorials
   </Card>
   <Card
     title="Migration"
     icon="Rocket"
     href="/migration/migrating-to-shuttle"
+    color="#fb7f14"
   >
     Migrate an existing project to Shuttle
   </Card>
 </CardGroup>
 
----
+###
 
 <CardGroup>
   <Card
