--- a/introduction/what-is-shuttle.mdx
+++ b/introduction/what-is-shuttle.mdx
@@ -4,7 +4,7 @@ description: "Shuttle is a Rust-native cloud development platform that lets you 
 icon: "question"
 ---
 
-![](/images/infra-from-code.gif)
+![infra-from-code](/images/infra-from-code.gif)
 
 <Info>The GIF above demonstrates how easy it is to add resources to your project, visualized with the [Shuttle Console](https://console.shuttle.rs/).</Info>
 
@@ -42,11 +42,11 @@ To make life easier we have implemented all the boilerplate required for these R
 - [Poem](/examples/other)
 - [Tide](/examples/other)
 - [Thruster](/examples/other)
-- [shuttle-next](/shuttle-next/overview)
+- [shuttle-next](/examples/shuttle-next)
 
 The Discord Bot building frameworks [Serenity](/examples/serenity) and [Poise](/examples/poise) are also officially supported.
 
-If you need a custom service, you can take a look at our guide [right here](../tutorials/custom-service).
+If you need a custom service, you can take a look at our guide [right here](/templates/tutorials/custom-service).
 
 ## Resource Provisioning
 
