--- a/examples/actix.mdx
+++ b/examples/actix.mdx
@@ -9,7 +9,7 @@ This section revolves around simple Actix examples you can get quickly started w
 2. Copy pasting the contents of the example you want to deploy -- make sure to check the tabs of the snippet(s) to ensure you are copying the right code/file
 3. Running the `cargo shuttle deploy` command
 
-<Tip>If you are looking for step-by-step guides, check out our [How To](../tutorials) section.</Tip>
+<Tip>If you are looking for step-by-step guides, check out our [Tutorials](/templates/tutorials) section.</Tip>
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
