--- a/examples/examples-repo-link.mdx
+++ b/examples/examples-repo-link.mdx
@@ -1,4 +1,5 @@
 ---
 title: "All Examples"
-url: "https://github.com/shuttle-hq/shuttle-examples"
+url: "https://github.com/shuttle-hq/shuttle-examples#readme"
+icon: "github"
 ---
