--- a/examples/shuttle-next.mdx
+++ b/examples/shuttle-next.mdx
@@ -1,28 +1,24 @@
 ---
-title: "Shuttle-next"
-description:
-  "Shuttle-next is a batteries-included, WASM-based backend web-framework."
+title: "Shuttle Next"
 ---
 
-Shuttle-next is a brand new WASM web-framework based on axum and hyper. There are many benefits to
+Shuttle-next is a brand new WASM web-framework based on Axum and Hyper. There are many benefits to
 using WASM for a backend web-framework, but one of the key features is the isolation it offers. Since
 WASM modules have no notion of a file system, a shuttle-next project can only interact with the host
 through resources explicitly declared by us. In this first iteration, the only resource available is
 an HTTP stream to and from a project.
 
-Shuttle-next is very much a work in progress, and we're releasing this iteration without some of the 
-features that make shuttle a pleasure to use, for example the ability to effortlessly deploy and connect 
-to a database. It's also not currently possible to use any middleware. We're planning to implement this 
-functionality, and more, in the near future. We're also hoping that the feedback we get from this release 
-will help us see which features we should prioritize, and which areas of the framework's design need the 
+Shuttle-next is very much a work in progress, and we're releasing this iteration without some of the
+features that make shuttle a pleasure to use, for example the ability to effortlessly deploy and connect
+to a database. It's also not currently possible to use any middleware. We're planning to implement this
+functionality, and more, in the near future. We're also hoping that the feedback we get from this release
+will help us see which features we should prioritize, and which areas of the framework's design need the
 most attention going forward.
 
-> Note: shuttle-next does not currently work on Windows, it only works on unix systems (i.e mac, Linux and 
-> Windows Subsystem for Linux). We aim to resolve this in future releases.
+<Info> Note: shuttle-next does not currently work on Windows, it only works on unix systems (i.e mac, Linux and Windows Subsystem for Linux). We aim to resolve this in future releases. </Info>
 
-## Hello world!
 
-Simple 'Hello world' app using shuttle-next.
+Simple 'Hello world' app using Shuttle Next.
 
 ```bash
 cargo new --lib hello-world
@@ -30,7 +26,7 @@ cd hello-world
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
-You'll also notice that this is a `cdylib` and not a binary, like other shuttle projects.
+You'll also notice that this is a `cdylib` and not a binary, like other Shuttle projects.
 
 ```toml Cargo.toml
 [package]
@@ -82,19 +78,19 @@ We can also add an endpoint that takes the body from the request using the axum 
 extractor, lazily map its bytes to uppercase and stream it back in our response:
 
 First, lets add the `futures` crate to our `Cargo.toml`:
-```
+```bash
 cargo add futures
 ```
 
 ```rust lib.rs
 shuttle_next::app! {
-    // We need to add some imports (inside the app! macro), 
+    // We need to add some imports (inside the app! macro),
     // all re-exported from axum 0.6
     use shuttle_next::body::StreamBody;
     use shuttle_next::extract::BodyStream;
     use shuttle_next::response::{Response, IntoResponse};
-    
-    // We'll also need the futures `TryStreamExt` trait to manipulate 
+
+    // We'll also need the futures `TryStreamExt` trait to manipulate
     // the body stream
     use futures::TryStreamExt;
 
