--- a/getting-started/shuttle-commands.mdx
+++ b/getting-started/shuttle-commands.mdx
@@ -88,7 +88,7 @@ All project-related commands can use:
 ### Manage resources
 
 - `cargo shuttle resource list`: List resources linked to this project.
-- `cargo shuttle resource delete <type>`: Delete a resource. Thus far, only databases can be deleted with this command.
+- `cargo shuttle resource delete <type>`: Delete a resource such as databases and secrets.
 
 ### Shell completions
 
