--- a/getting-started/installation.mdx
+++ b/getting-started/installation.mdx
@@ -20,7 +20,7 @@ curl -sSfL https://www.shuttle.rs/install | bash
 Or on Windows with:
 
 ```powershell
-iwr "https://www.shuttle.rs/install-win" | iex
+iwr https://www.shuttle.rs/install-win | iex
 ```
 
 ### Pre-built binary
@@ -45,15 +45,23 @@ cargo install cargo-shuttle
 
 <Note>Installing cargo-shuttle from source requires Rust 1.75+. You can verify by running `cargo --version`.</Note>
 
-### Arch Linux
+### Distro packages (unofficial)
 
-`cargo-shuttle` can be installed from the [community repository](https://archlinux.org/packages/extra/x86_64/cargo-shuttle/) using [pacman](https://wiki.archlinux.org/title/Pacman):
+`cargo-shuttle` is also packaged by community members for some distros:
+
+[![Packaging status](https://repology.org/badge/vertical-allrepos/cargo-shuttle.svg)](https://repology.org/project/cargo-shuttle/versions)
+
+Arch Linux: available on the [community repository](https://archlinux.org/packages/extra/x86_64/cargo-shuttle/).
 
 ```sh
 pacman -S cargo-shuttle
 ```
 
-> This is a community package maintained by [orhun](https://github.com/orhun).
+Alpine Linux: available on [Alpine Edge](https://pkgs.alpinelinux.org/packages?name=cargo-shuttle&branch=edge) after enabling the [testing repository](https://wiki.alpinelinux.org/wiki/Repositories).
+
+```sh
+apk add cargo-shuttle
+```
 
 ## Login
 
@@ -63,5 +71,4 @@ After installing, log in with:
 cargo shuttle login
 ```
 
-Once you've done this, you are good to go!
 To get up and running, proceed to our [Quick Start](./quick-start) page!
