--- a/configuration/environment.mdx
+++ b/configuration/environment.mdx
@@ -17,7 +17,7 @@ Deployments are currently built and run in our `shuttle-deployer` container, whi
 The current Rust version is `1.75.0`, toolchain `stable-x86_64-unknown-linux-gnu`.
 It's not currently possible for you to change this, but being able to choose which toolchain your project will be compiled with is a planned feature.
 
-The targets `wasm32-wasi` and `wasm32-unknown-unknown` are installed, which enables compiling `shuttle-next` apps and WASM frontends.
+The target `wasm32-unknown-unknown` is installed, which enables compiling WASM frontends.
 
 ## External tools
 
