--- a/getting-started/local-run.mdx
+++ b/getting-started/local-run.mdx
@@ -101,3 +101,41 @@ if cfg!(debug_assertions) {
     router = router.layer(tower_livereload::LiveReloadLayer::new());
 }
 ```
+
+### Docker engines
+
+`cargo-shuttle` uses the [bollard](https://crates.io/crates/bollard) crate to interact with the Docker engine on local runs.
+
+If you are using a non-standard Docker engine, you might get this error:
+
+```text
+got unexpected error while inspecting docker container:
+error trying to connect: No such file or directory
+```
+
+The error is emitted due to bollard not connecting to the correct Docker Socket location.
+
+On Unix, bollard defaults to connecting to `unix:///var/run/docker.sock` unless the `DOCKER_HOST` env variable overrides it.
+
+If you end up using a `DOCKER_HOST` like below, you can add the `export DOCKER_HOST=...` line to your shell's config file to have it automatically set in new shell sessions.
+
+#### Docker Desktop
+
+```bash
+export DOCKER_HOST="unix://$HOME/.docker/run/docker.sock"
+```
+
+#### Podman
+
+You will need to expose a rootless socket for Podman, and then set the `DOCKER_HOST` environment variable:
+
+```bash
+podman system service --time=0 unix:///tmp/podman.sock
+export DOCKER_HOST=unix:///tmp/podman.sock
+```
+
+#### Colima
+
+```bash
+export DOCKER_HOST="unix://$HOME/.colima/default/docker.sock"
+```
